	* Implement FixedResultSpeller.
	* VOIKKO_OPT_IGNORE_NUMBERS now only affects spell checking.
	  Previously it affected spelling suggestions too, but this behaviour made
	  it difficult independently implement spell checkings and spelling suggestions.
	* Move VOIKKO_OPT_ENCODING, VOIKKO_INTERSECT_COMPOUND_LEVEL and
	  voikko_set_string_option to voikko_deprecated.h, ignore them in the library.

2010-03-05 Harri Pitkänen <hatapitk@iki.fi>
	* Complete the refactoring of suggestion generator code.

2010-03-04 Harri Pitkänen <hatapitk@iki.fi>
	* Allow specifying suggestion generator backend in the configuration file.
	* Implement NullAnalyzer and SuggestionGeneratorNull.

2010-03-01 Harri Pitkänen <hatapitk@iki.fi>
	* Recognize more Unicode characters as letters.

2010-02-27 Harri Pitkänen <hatapitk@iki.fi>
	* Implement SuggestionGeneratorFactory.
	* Add Lttoolbox backend.

2010-02-20 Harri Pitkänen <hatapitk@iki.fi>
	* Replace uses of iswlower, iswdigit and iswspace with locale independent implementation.
	* Remove ENTER_V and EXIT_V macros, these should no longer be needed.
	* Increase version numbers for version 3.0.

2010-02-14 Harri Pitkänen <hatapitk@iki.fi>
	* Replace uses of iswupper and towupper with locale independent implementation.

2010-02-13 Harri Pitkänen <hatapitk@iki.fi>
	* Increase version numbers for 2.3.1.

2010-02-11 Andris Pavenis <andris.pavenis@iki.fi>
	* Updated MSVC project file.

2010-02-11 Harri Pitkänen <hatapitk@iki.fi>
	* Replace uses of towlower with locale independent implementation.

2010-02-10 Harri Pitkänen <hatapitk@iki.fi>
	* Add virtual destructors for Speller and Hyphenator.

2010-01-30 Harri Pitkänen <hatapitk@iki.fi>
	* Python interface: Make Dictionary objects hashable.

2010-01-27 Harri Pitkänen <hatapitk@iki.fi>
	* Fix Python bindings to work with Python 3.

2010-01-02 Harri Pitkänen <hatapitk@iki.fi>
	* Remove dependency on glib.

2010-01-01 Harri Pitkänen <hatapitk@iki.fi>
	* Import UTF8-CPP version 2.2.4 from