@@ -18,7 +18,6 @@
 
 #include "morphology/Analysis.hpp"
 #include "setup/setup.hpp"
-#include "utils/utils.hpp"
 #include "utils/StringUtils.hpp"
 #include "hyphenator/AnalyzerToFinnishHyphenatorAdapter.hpp"
 #include <cstdlib>
@@ -45,7 +44,7 @@ VOIKKOEXPORT char * voikko_hyphenate_cstr(int handle, const char * word) {
 	if (word == 0) return 0;
 	size_t len = strlen(word);
 	if (len > LIBVOIKKO_MAX_WORD_CHARS) return 0;
-	wchar_t * word_ucs4 = voikko_cstrtoucs4(word, voikko_options.encoding, len);
+	wchar_t * word_ucs4 = utils::StringUtils::ucs4FromUtf8(word, len);
 	if (word_ucs4 == 0) return 0;
 	char * result = voikko_hyphenate_ucs4(handle, word_ucs4);
 	delete[] word_ucs4;
