@@ -5,6 +5,7 @@
 	  it difficult independently implement spell checkings and spelling suggestions.
 	* Move VOIKKO_OPT_ENCODING, VOIKKO_INTERSECT_COMPOUND_LEVEL and
 	  voikko_set_string_option to voikko_deprecated.h, ignore them in the library.
+	* Remove all iconv related code, use platform independent UTF-8 conversion.
 
 2010-03-05 Harri Pitkänen <hatapitk@iki.fi>
 	* Complete the refactoring of suggestion generator code.
